--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -1,9 +1,11 @@
-version: 0.2
+
+name: Build React App
+on:
+  push:
+     branches: [ master ]
 
 run-as: ubuntu
- on -
-   push:
-     "master"
+
 proxy:
   upload-artifacts: yes
   logs: yes
@@ -16,6 +18,6 @@ phases:
    
 artifacts:
   files:
-    - target/messageUtil-1.0.jar
+    - dist/*
   discard-paths: yes
 
