--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -15,10 +15,10 @@ phases:
     runtime-versions:
       nodejs: 18
     commands:
-      - npm install
+      - sudo npm install
    build:
     commands:
-      - npm run build
+      - sudo npm run build
    
 artifacts:
   files:
