--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -13,9 +13,11 @@ phases:
     runtime-versions:
       nodejs: 18
     commands:
+      - cd movieApp/
       - npm install
    build:
     commands:
+      - cd movieApp/
       - npm run build
    
 artifacts:
